[FIX] Sonar code coverage.