@@ -117,6 +117,8 @@
     <dependency.mockito.version>2.23.4</dependency.mockito.version>
     <dependency.cucumber.version>4.2.2</dependency.cucumber.version>
     <dependency.awaitility.version>1.7.0</dependency.awaitility.version>
+
+    <argLine>--illegal-access=permit</argLine>
   </properties>
 
   <prerequisites>
@@ -184,9 +186,14 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.plugin.surefire.version}</version>
           <configuration>
-            <forkCount>0</forkCount>
             <useSystemClassLoader>false</useSystemClassLoader>
           </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${maven.plugin.jacoco.version}</version>
         </plugin>
 
         <plugin>
@@ -241,12 +248,6 @@
           <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
           <version>${maven.plugin.sonar.version}</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.jacoco</groupId>
-          <artifactId>jacoco-maven-plugin</artifactId>
-          <version>${maven.plugin.jacoco.version}</version>
         </plugin>
 
         <plugin>
